fixed narrow screen  media query for navbar close on click
and found that on ios, closing navbar while scrolling to anchor
will make the scroll behave weirdly and unreliably,
(scroll at full top/bottom, or stop after/before at the anchor)
fixed by removing smooth scroll for mobile,
need to find a way to keep it,
i could also have removed the bar closing,
also fixed togsidemobile invisible button's z-index

--- a/global/fix.css
+++ b/global/fix.css
@@ -5,7 +5,7 @@
 ::-webkit-scrollbar-thumb
 { background: var(--fg2); border-radius: 0px; }
 main { scroll-behavior: instant; }
-main.loaded { scroll-behavior: smooth; }
+main.smooth { scroll-behavior: smooth; }
 
 /* sidebar scrollbar */
 #sidenav { padding-right: 0.75rem; }
@@ -71,13 +71,14 @@ screen and (max-aspect-ratio: 1) {
 		height:100vh;
 		width:100vw;
 		position:absolute;
+		z-index:1;
 		/* background-color:purple; */
 	}
 	.folded + #sidetogmobile {
 		width:8vw;
 	}
 	#sidebar {
-		z-index:1;
+		z-index:2;
 	}
 
 	#sidebar {
